# AI-Agent-Site

./: .env.example  .gitignore  CHANGELOG_MVP.md  DEPLOYMENT.md  MVP_RELEASE_CHECKLIST.md  MVP_STATUS.md  Makefile  README.md  docker-compose.yml  render.yaml
.github/workflows/: daily-ops-check.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: pipeline.py
backend/app/api/routes/: internal.py  public.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  news.py
backend/app/orchestrator/: scheduler.py
backend/app/schemas/: internal.py  news.py
backend/app/services/: adaptive_policy_service.py  bootstrap.py  cluster.py  crawler.py  feed_service.py  memory_service.py  model_gateway.py  ops_service.py  scoring.py  self_heal_service.py
backend/tests/: test_adaptive_policy.py  test_api.py  test_api_contracts.py  test_cluster.py  test_crawler.py  test_feed_service.py  test_merge_agent.py  test_model_gateway.py  test_monitoring_qa.py  test_ops_service.py  test_pipeline_e2e.py  test_pipeline_guards.py  test_publishing_signals.py  test_ranking_agent.py  test_scoring.py  test_self_heal.py
backend/tests/fixtures/contracts/v1/: feed_sections.json  stories.json
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: FeedState.tsx  Header.tsx  QuickUpdateRow.tsx  SignalsRail.tsx  (+1 more)
scripts/: daily_ops_check.sh  live_check.sh  smoke_mvp.sh
(+9 files in other folders)
